fix: CI编译修复 - 构造函数参数补齐 + getLast() 替换为 Java 17 兼容写法
- CareerRetrievalEnhancementTest: 构造函数补上缺的 3 个 ObjectProvider 参数
- ResumeOptimizationReviewTest: List.getLast() → get(size()-1)
- ResumeOptimizationSuggestionTest: 两处 getLast() 替换